--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       run: |
-        aws ecr get-login-password --region ap-northeast-1 | docker login --username AWS --password-stdin ${ECR_REGISTRY}
+        aws ecr get-login-password --region ap-northeast-1 | docker login --username AWS --password-stdin 163465570567.dkr.ecr.ap-northeast-1.amazonaws.com
       env:
         ECR_REGISTRY: arn:aws:ecr:ap-northeast-1:163465570567:repository/githubtest
 
