--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -43,7 +43,7 @@ jobs:
       run: |
         aws ecr get-login-password --region ap-northeast-1 | docker login --username AWS --password-stdin 163465570567.dkr.ecr.ap-northeast-1.amazonaws.com
       env:
-        ECR_REGISTRY: arn:aws:ecr:ap-northeast-1:163465570567:repository/githubtest
+        ECR_REGISTRY: 163465570567.dkr.ecr.ap-northeast-1.amazonaws.com/githubtest
 
     - name: Build, tag, and push image
       env:
