--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -1,7 +1,7 @@
 name: Build and push to ECR
 
 env:
-  ECR_REGISTRY: arn:aws:ecr:ap-northeast-1:163465570567:repository/githubtest
+  ECR_REGISTRY: 163465570567.dkr.ecr.ap-northeast-1.amazonaws.com/githubtest
   ECS_CLUSTER_NAME: githubtest-ecs-cluster
   FRONT_SERVICE_NAME: githubtest-front-svc
   BACK_SERVICE_NAME: githubtest-back-svc
@@ -41,9 +41,7 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       run: |
-        aws ecr get-login-password --region ap-northeast-1 | docker login --username AWS --password-stdin 163465570567.dkr.ecr.ap-northeast-1.amazonaws.com
-      env:
-        ECR_REGISTRY: 163465570567.dkr.ecr.ap-northeast-1.amazonaws.com/githubtest
+        aws ecr get-login-password --region ap-northeast-1 | docker login --username AWS --password-stdin ${ECR_REGISTRY}
 
     - name: Build, tag, and push image
       env:
